--- a/contes.html
+++ b/contes.html
@@ -52,7 +52,7 @@
 
     <div class="rox m-0 p-0">
         <div class="col-lg-12 text-center">
-            <img src="./assets/img/contes-du-hasard.jpg" class="dvd" alt="contes du hasard">
+            <img src="./assets/img/contes-du-hasard.jpg" class="dvd" alt="Affiche du film Les Contes du Hasard">
         </div>
         <div class="col">
             <p class="m-5 fs-5">Ryusuke Hamaguchi déploie en trois épisodes une uvre parsemée d'amour, de désirs et de relations entremêlées. Alors que chez une jeune femme, une conversation avec une connaissance éveille la nostalgie de son ex-petit ami, un étudiant tente de détruire la carrière d'un professeur d'université. Le troisième épisode est centré sur deux prétendues camarades de classe qui se retrouvent par hasard vingt ans après la fin de leurs études.</p>
@@ -72,22 +72,22 @@
 
     <footer>
         <div class="container-fluid bg-dark">
-            <div class="row border-dark mt-5 p-3">
-                <div class="col-lg-9 d-flex justify-content-between text-center">
-                    <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
-                </div>
-                <div class="col-lg-3 d-flex justify-content-end">
-                    <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
-                    <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
-                    <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
-                    <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
-                </div>
+          <div class="row border-dark mt-5 p-3">
+            <div class="col-lg-9 d-flex justify-content-between text-center">
+              <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
+              <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
+              <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
+              <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
             </div>
+            <div class="col-lg-3 d-flex justify-content-end">
+              <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="Logo de twitter"></a>
+              <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="Logo de tiktok"></a>
+              <a href="https://www.instagram.com/allocine/"><img src="assets/img/insta.png" class="imgSize m-2" alt="Logo d'instagram"></a>
+              <a href="https://www.facebook.com/allocine"><img src="assets/img/facebook.png" class="imgSize m-2" alt="Logo de facebook"></a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
