--- a/films.html
+++ b/films.html
@@ -23,7 +23,7 @@
     <header>
         <div class="Container bg-dark">
             <a href="index.html">
-                <H1 class="text-center text-light pt-2 mb-0 pb-0"><img src="./assets/bobine.png" alt="logo">CinéFilm
+                <H1 class="text-center text-light pt-2 mb-0 pb-0"><img src="./assets/bobine.png" alt="logo du site">CinéFilm
                 </H1>
             </a>
 
@@ -64,7 +64,7 @@
 
         <div class="card carte affiche " style="width: 18rem;">
             <img src="./assets/img/affiche-autant-en-emporte-le-vent.png" class="card-img-top dvd"
-                alt="autant-en-emporte-le-vent">
+                alt="Affiche du film Autant en Emporte le Vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -122,7 +122,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/fight_club.jpg" class="card-img-top dvd" alt="Fight_Club">
+            <img src="./assets/img/fight_club.jpg" class="card-img-top dvd" alt="Affiche du film Fight Club">
             <div class="card-body">
                 <h5 class="card-title">Fight Club</h5>
                 <p class="card-text">
@@ -178,7 +178,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/gonegirl.jpg" class="card-img-top dvd" alt="Gone_Girl">
+            <img src="./assets/img/gonegirl.jpg" class="card-img-top dvd" alt="Affiche du film Gone Girl">
             <div class="card-body">
                 <h5 class="card-title">Gone Girl</h5>
                 <p class="card-text">
@@ -233,7 +233,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/grantorino.jpg" class="card-img-top dvd" alt="Gran_Torino">
+            <img src="./assets/img/grantorino.jpg" class="card-img-top dvd" alt="Affiche du film Gran Torino">
             <div class="card-body">
                 <h5 class="card-title">Gran Torino</h5>
                 <p class="card-text">
@@ -288,7 +288,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/outofafrica.jpg" class=" dvd" alt="Out_Of_Africa">
+            <img src="./assets/img/outofafrica.jpg" class=" dvd" alt="Affiche du film Out Of Africa">
             <div class="card-body">
                 <h5 class="card-title">Out Of Africa</h5>
                 <p class="card-text">
@@ -356,7 +356,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly  m-0 p-0">
             <div class="card carte affiche " style="width: 18rem;">
                 <img src="./assets/img/JohnWick.jpg" class="card-img-top dvd"
-                    alt="autant-en-emporte-le-vent">
+                    alt="Affiche du film John Wick">
                 <div class="card-body">
                     <h5 class="card-title">John Wick</h5>
                     <p class="card-text">
@@ -406,7 +406,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly  m-0 p-0">
             <div class="card carte affiche" style="width: 18rem;">
                 <img src="./assets/img/Unhommeencolere.jpg" class="card-img-top dvd"
-                    alt="un homme en colere">
+                    alt="Affiche du film Un Homme en Colere">
                 <div class="card-body">
                     <h5 class="card-title">Un Homme En Colère</h5>
                     <p class="card-text">
@@ -463,7 +463,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly m-0 p-0">
 
             <div class="card carte affiche" style="width: 18rem;">
-                <img src="./assets/img/1917.jpg" class=" dvd" alt="guerre">
+                <img src="./assets/img/1917.jpg" class=" dvd" alt="Affiche du film 1917">
                 <div class="card-body">
                     <h5 class="card-title">1917</h5>
                     <p class="card-text">
@@ -512,7 +512,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly m-0 p-0">
             <div class="card carte affiche" style="width: 18rem;">
                 <img src="./assets/img/1492.jpg" class="card-img-top dvd"
-                    alt="autant-en-emporte-le-vent">
+                    alt="Affiche du film 1492">
                 <div class="card-body">
                     <h5 class="card-title">1492</h5>
                     <p class="card-text">
@@ -564,7 +564,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly m-0 p-0">
             <div class="card carte affiche" style="width: 18rem;">
                 <img src="./assets/img/Legion.jpg" class="card-img-top dvd"
-                    alt="autant-en-emporte-le-vent">
+                    alt="Affiche du film Legion">
                 <div class="card-body">
                     <h5 class="card-title">Legion</h5>
                     <p class="card-text">
@@ -616,7 +616,7 @@
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly m-0 p-0">
             <div class="card carte affiche" style="width: 18rem;">
                 <img src="./assets/img/lescrimesdegrindelwald.jpg" class="card-img-top dvd"
-                    alt="autant-en-emporte-le-vent">
+                    alt="Affiche du Film Les Animaux Fantastiques: Les Crimes de Grindelwald">
                 <div class="card-body">
                     <h5 class="card-title">Les Crimes de Grindelwald</h5>
                     <p class="card-text">
@@ -690,7 +690,7 @@
     <div class=" container2">
         <div class="card carte affiche " style="width: 18rem;">
             <img src="./assets/img/affiche-film-country-for-old-men-140.jpg" class="card-img-top dvd"
-                alt="autant-en-emporte-le-vent">
+                alt="Affiche du film No Country for Old Men">
             <div class="card-body">
                 <h5 class="card-title">No Country For Old Men</h5>
                 <p class="card-text">
@@ -746,7 +746,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/fellowship.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/fellowship.jpg" class="card-img-top dvd" alt="Affiche du film Le Seigneur des Anneaux: La communauté de l'anneau">
             <div class="card-body">
                 <h5 class="card-title">Le Seigneur des Anneaux</h5>
                 <p class="card-text">
@@ -801,7 +801,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/marsatta.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/marsatta.jpg" class="card-img-top dvd" alt="Affiche du film Mars Attack">
             <div class="card-body">
                 <h5 class="card-title">MARS ATTACK</h5>
                 <p class="card-text">
@@ -856,7 +856,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/ET.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/ET.jpg" class="card-img-top dvd" alt="Affiche du Film E.T L'Extraterrestre">
             <div class="card-body">
                 <h5 class="card-title">E.T L'Extraterrestre</h5>
                 <p class="card-text">
@@ -913,7 +913,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/citizen.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/citizen.jpg" class="card-img-top dvd" alt="Affiche du film Citizen Kane">
             <div class="card-body">
                 <h5 class="card-title">Citizen Kane</h5>
                 <p class="card-text">
@@ -978,22 +978,22 @@
 
     <footer>
         <div class="container-fluid bg-dark">
-            <div class="row border-dark mt-5 p-3">
-                <div class="col-lg-9 d-flex justify-content-between text-center">
-                    <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
-                </div>
-                <div class="col-lg-3 d-flex justify-content-end">
-                    <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
-                    <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
-                    <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
-                    <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
-                </div>
+          <div class="row border-dark mt-5 p-3">
+            <div class="col-lg-9 d-flex justify-content-between text-center">
+              <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
+              <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
+              <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
+              <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
             </div>
+            <div class="col-lg-3 d-flex justify-content-end">
+              <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="Logo de twitter"></a>
+              <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="Logo de tiktok"></a>
+              <a href="https://www.instagram.com/allocine/"><img src="assets/img/insta.png" class="imgSize m-2" alt="Logo d'instagram"></a>
+              <a href="https://www.facebook.com/allocine"><img src="assets/img/facebook.png" class="imgSize m-2" alt="Logo de facebook"></a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
 
 
