--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
   <header>
     <div class="Container bg-dark">
-      <H1 class="text-center text-light pt-2 mb-0 pb-0"><img src="./assets/bobine.png" alt="logo">CinéFilm</H1>
+      <H1 class="text-center text-light pt-2 mb-0 pb-0"><img src="./assets/bobine.png"
+          alt="logo du site internet">CinéFilm</H1>
     </div>
   </header>
 
@@ -62,7 +63,8 @@
         <div class="box">
           <!-- img box -->
           <div class="slide-img">
-            <img src="./assets/img/secrets.jpg" alt="secrets">
+            <img src="./assets/img/secrets.jpg"
+              alt="Affiche du film Les animaux Fantastiques: Les secrets de Dumbledore">
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->M
@@ -89,7 +91,7 @@
         <div class="box">
           <!-- img box -->
           <div class="slide-img">
-            <img src="./assets/img/sonic.jpg" alt="sonic">
+            <img src="./assets/img/sonic.jpg" alt="Affiche du film Sonic 2">
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
@@ -115,7 +117,7 @@
         <div class="box">
           <!-- img box -->
           <div class="slide-img">
-            <img src="./assets/img/encanto.jpg" alt="encanto">
+            <img src="./assets/img/encanto.jpg" alt="Affiche du film encanto">
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
@@ -137,7 +139,7 @@
         <div class="box">
           <!-- img box -->
           <div class="slide-img">
-            <img src="./assets/img/contes-du-hasard.jpg" alt="contes du hasard">
+            <img src="./assets/img/contes-du-hasard.jpg" alt="Affiche du film Les Contes du Hasard">
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
@@ -173,7 +175,7 @@
         <div id="actualité" class="card">
           <div class="card-body text-center">
             <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top dvd"
-              alt="Affiche-Cannes">
+              alt="Affiche du 75 ème Festival de Cannes">
             <h5 class="card-title mx-3">75ème édition du festival de Cannes</h5>
             <p class="card-text cannes mx-4 p-2">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de
               Cannes.<br>Abonnez-vous à
@@ -207,7 +209,8 @@
       <div class="col-lg-3">
         <div id="offres" class="card">
           <div class="card-body text-center">
-            <img src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
+            <img src="assets/img/printemps.jpg" class="card-img-top size"
+              alt="Image promotionnelle du Printemps-du-cinéma">
             <h5 class="card-title">Printemps du Cinéma</h5>
             <p class="card-text mx-2">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.
             </p>
@@ -217,7 +220,7 @@
       <div class="col-lg-3">
         <div class="card">
           <div class="card-body text-center">
-            <img src="assets/img/cinéchèque.jpg" class="card-img-top size" alt="cinéchèque">
+            <img src="assets/img/cinéchèque.jpg" class="card-img-top size" alt="Image promotionnelle du Cinéchèque">
             <h5 class="card-title">Cinéchèque</h5>
             <p class="card-text mx-2">Une place valable dans tous les cinémas de France au tarif de 8,50€.
             </p>
@@ -242,10 +245,14 @@
           <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
         </div>
         <div class="col-lg-3 d-flex justify-content-end">
-          <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter"></a>
-          <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok"></a>
-          <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
-          <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
+          <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2"
+              alt="Logo de twitter"></a>
+          <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2"
+              alt="Logo de tiktok"></a>
+          <a href="https://www.instagram.com/allocine/"><img src="assets/img/insta.png" class="imgSize m-2"
+              alt="Logo d'instagram"></a>
+          <a href="https://www.facebook.com/allocine"><img src="assets/img/facebook.png" class="imgSize m-2"
+              alt="Logo de facebook"></a>
         </div>
       </div>
     </div>
