--- a/secret.html
+++ b/secret.html
@@ -53,7 +53,7 @@
 
     <div class="rox m-0 p-0">
         <div class="col-lg-12 text-center">
-            <img src="./assets/img/secrets.jpg" alt="secret">
+            <img src="./assets/img/secrets.jpg" alt="Affiche du Film Les Animaux Fantastiques : Les secrets de Grindelwald">
         </div>
         <div class="col">
             <p class="m-5 fs-5">Le professeur Albus Dumbledore sait que le puissant sorcier noir Gellert Grindelwald se
@@ -88,22 +88,22 @@
 
     <footer>
         <div class="container-fluid bg-dark">
-            <div class="row border-dark mt-5 p-3">
-                <div class="col-lg-9 d-flex justify-content-between text-center">
-                    <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
-                </div>
-                <div class="col-lg-3 d-flex justify-content-end">
-                    <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
-                    <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
-                    <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
-                    <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
-                </div>
+          <div class="row border-dark mt-5 p-3">
+            <div class="col-lg-9 d-flex justify-content-between text-center">
+              <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
+              <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
+              <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
+              <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
             </div>
+            <div class="col-lg-3 d-flex justify-content-end">
+              <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="Logo de twitter"></a>
+              <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="Logo de tiktok"></a>
+              <a href="https://www.instagram.com/allocine/"><img src="assets/img/insta.png" class="imgSize m-2" alt="Logo d'instagram"></a>
+              <a href="https://www.facebook.com/allocine"><img src="assets/img/facebook.png" class="imgSize m-2" alt="Logo de facebook"></a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
