--- a/sonic.html
+++ b/sonic.html
@@ -56,7 +56,7 @@
 
     <div class="rox m-0 p-0">
         <div class="col-lg-12 text-center">
-            <img src="./assets/img/sonic.jpg" class="dvd" alt="sonic">
+            <img src="./assets/img/sonic.jpg" class="dvd" alt="Affiche du Film Sonic 2">
         </div>
         <div class="col">
             <p class="m-5 fs-5">Bien installé dans la petite ville de Green Hills, Sonic veut maintenant prouver qu’il a l’étoffe d'un véritable héros. Un défi de taille se présente à lui quand le Dr Robotnik refait son apparition. Accompagné de son nouveau complice Knuckles, ils sont en quête d’une émeraude dont le pouvoir permettrait de détruire l’humanité toute entière. Pour s’assurer que l’émeraude ne tombe entre de mauvaises mains, Sonic fait équipe avec Tails. Commence alors un voyage à travers le monde, plein de péripéties.</p>
@@ -75,22 +75,22 @@
 
     <footer>
         <div class="container-fluid bg-dark">
-            <div class="row border-dark mt-5 p-3">
-                <div class="col-lg-9 d-flex justify-content-between text-center">
-                    <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
-                    <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
-                </div>
-                <div class="col-lg-3 d-flex justify-content-end">
-                    <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
-                    <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
-                    <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
-                    <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
-                </div>
+          <div class="row border-dark mt-5 p-3">
+            <div class="col-lg-9 d-flex justify-content-between text-center">
+              <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
+              <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
+              <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
+              <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
             </div>
+            <div class="col-lg-3 d-flex justify-content-end">
+              <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="Logo de twitter"></a>
+              <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="Logo de tiktok"></a>
+              <a href="https://www.instagram.com/allocine/"><img src="assets/img/insta.png" class="imgSize m-2" alt="Logo d'instagram"></a>
+              <a href="https://www.facebook.com/allocine"><img src="assets/img/facebook.png" class="imgSize m-2" alt="Logo de facebook"></a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
